--- a/form.html
+++ b/form.html
@@ -21,9 +21,11 @@
 
     <div>
         <label for="sexM">Male</label>
-        <input type="radio" name="sexM" id="sexM" value="male" >
+        <input type="radio" name="gender" id="sexM" value="male" >
         <label for="sexF">Female</label>
-        <input type="radio" name="sexF" id="sexF" value="female">
+        <input type="radio" name="gender" id="sexF" value="female">
+        <label for="sexO">Other</label>
+        <input type="radio" name="gender" id="sexO" value="other">
     </div>
 
     <div>
@@ -35,7 +37,7 @@
             <!-- Validation Using maxlength and minlength not compatible with all browsers -->
             <!-- <input type="password" name="pass" minlength="5" maxlength="10" placeholder="password" required> -->
             
-            <input type="password" name="pass" pattern=".{5,}" placeholder="password" title="Minimun Length: 5 characters" required>
+            <input type="password" name="pass" pattern=".{5,10}" placeholder="password" title="Minimun Length: 5 to 10 characters" required>
             
     </div>
 
