--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="form.css">
     <title>Form Exercise</title>
 </head>
 <body>
@@ -33,6 +34,7 @@
             <input type="email" name="email"  placeholder="your email" required>
         
             <label for="pass">Senha:</label>
+
 
             <!-- Validation Using maxlength and minlength not compatible with all browsers -->
             <!-- <input type="password" name="pass" minlength="5" maxlength="10" placeholder="password" required> -->
